# cmvision

./: CMakeLists.txt  cmvision-compressed.launch  cmvision.launch  colors-blue-cocco-banana.txt  colors-orange-drone-pilot-jacket.txt  colors-purple-baby-ball.txt  colors.txt  package.xml
cmake-findwx-widgets-patch/: patch-usr-share-cmake-3.10-Modules-FindwxWidgets-cmake-file-failed-to-open-for-reading-No-such-file-or-directory-20180529-151452.txt  patch-usr-share-cmake-3.5-Modules-FindwxWidgets-cmake-file-failed-to-open-for-reading-No-such-file-or-directory-20180529-151452.txt
